03-Kubernetes/03-networking/app1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: backendpod
  labels:
    app: backend
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sleep', '3600']
---
apiVersion: v1
kind: Pod
metadata:
  name: frontendpod
  labels:
    app: frontend
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sleep', '3600']
